[package]
name = "breeze"
version = "0.1.0" # Managed by `release.sh`
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zedseven/breeze"
homepage = "https://github.com/zedseven/breeze"
description = "A tool for running presentations without fluff. Effectively a spiritual fork of the `suckless` tool, `sent`."

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
gfx = "0.18"
gfx_glyph = "0.17"
glutin = "0.31"
glutin-winit = "0.4"
image = "0.24"
old_school_gfx_glutin_ext = "0.32"
winit = "0.29"
