[package]
name = "breeze"
version = "1.1.0" # Managed by `release.sh`
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zedseven/breeze"
homepage = "https://github.com/zedseven/breeze"
description = "A tool for running presentations without fluff. Effectively a spiritual fork of the `suckless` tool, `sent`."

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
gfx = "0.18"
gfx_core = "0.9"
gfx_device_gl = "0.16"
gfx_glyph = "0.17"
glutin = "0.31"
glutin-winit = "0.4"
image = "0.24"
old_school_gfx_glutin_ext = "0.32"
rust-fontconfig = "0.1.7"
winit = "0.29"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "breeze" # Even though this property is called a "description", it's actually used as the application name in Task Manager
LegalCopyright = "© 2024 Zacchary Dempsey-Plante"
OriginalFilename = "breeze.exe"
